# FitFreak

./: DEPLOY_SOLANA.md  FitFreak.sh  INTEGRATION_GUIDE.md  LICENSE  README.md
backend/: .gitignore
backend/flask/templates/: index.html
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/ai/: aiCoach.js
frontend/src/components/: GlassCard.tsx  NeonButton.tsx  ProfileCard.tsx  VerificationStep.tsx  WalletConnectStep.tsx  Web3AuthStep.tsx
frontend/src/config/: api.js
frontend/src/data/: contests.js
frontend/src/hooks/: useWeb3.js
frontend/src/pages/: AuthPage.tsx  BettingPage.tsx  ChallengePage.tsx  ContestsPage.tsx  DashboardPage.tsx  LandingPage.tsx  LiveBetting.tsx  Page.jsx
solana-program/: .gitignore  Anchor.toml  DEPLOY.md  README.md  SUMMARY.md  Xargo.toml  deploy.sh  package.json
solana-program/client/: index.ts
solana-program/programs/fitfreak/: Cargo.toml
solana-program/programs/fitfreak/src/: lib.rs
solana-program/scripts/: deploy.sh
solana-program/tests/: fitfreak.ts
