[package]
name = "fitfreak"
version = "0.1.0"
description = "FitFreak Solana Program - Fitness Contests and Rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fitfreak"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"

